# stardust-compiler

./: .gitignore  CMakeLists.txt  Stardust Language Specification.md  readme.md
inc/: arg_parse.h  ast.h  context.h  error.h  ir_node.h  literal_process.h  llvm_header.h  llvm_ir.h  parse.h  sdtype.h  util.h  var_type.h
sdlib/: lib.c
src/: ast.cpp  context.cpp  error.cpp  literal.cpp  llvm_ir.cpp  main.cpp  operator.cpp  sdtype.cpp  spl_ir.cpp  type.cpp  util.cpp
src/lex/: lex.l  syntax.y
test2/: semantic_error.out  semantic_error.sd  test01.sd  test01.t  test02.sd  test02.t  test03.sd  test03.t  test04.t  test05.sd  test05.t  test06.sd  test06.t  test07.sd  test07.t  test08.t  test09.sd  test09.t  test10.sd  test10.t  test11.t  test12.t  test13.sd  test13.t  test14.sd  test14.t  test15.sd  test15.t  test_inner_func.sd  test_nfeature1.sd  test_nfeature3.sd  test_nfeature4.sd  test_nfeature5.sd  test_nfeature6.sd  test_nfeature7.sd  test_nfeature8.sd  test_nfeature9.sd  test_struct_in_function.sd
test_cases/phase1/: Arrays.out  Arrays.sd  Conditional.err  Conditional.out  Conditional.sd  Function.out  Function.sd  Function_error.err  Function_error.out  Function_error.sd  Loops.out  Loops.sd  Statements_error.err  Statements_error.out  Statements_error.sd  Struct_error.err  Struct_error.out  Struct_error.sd  Structs.out  Structs.sd  Variable.out  Variable.sd  s01.err  s01.out  s01.sd  s03.err  s03.out  s03.sd  s09.err  s09.out  s09.sd  test.err  test.out
test_cases/phase2/: semantic_error.err  semantic_error.out  semantic_error.sd  test01.err  test01.out  test02.err  test02.out  test03.err  test03.out  test03.sd  test04.err  test04.out  test04.sd  test05.err  test05.out  test06.err  test06.out  test06.sd  test09.err  test09.out  test09.sd  test10.err  test10.out  test11.err  test11.out  test11.sd  test12.err  test12.out  test12.sd  test_nfeature1.out  (+12 more)
(+27 files in other folders)
